  + Requirements bumped to PentiumIII+ (implies MMX, SSE) with PAE
  + All RAM is wiped on shutdown/reboot, regardless of 3GiB address space limit
  + Xorg server 1.10, better touchpad support

  + Added I2P, also supported as cables communication endpoint
  + Cables communication daemon runs under a designated user
  + OTFE partition now supports file permissions, sanitized during boot

  + Added small and fast Java runtime environment (JamVM)
  + Added HTML5 video/audio support to Midori
  + Added SASL (plain) authentication support to XChat
  + Added PPTP/OpenVPN/Cisco VPN support to NetworkManager
  + Added emelFM2 2-pane file manager

  + Audio mixer channels are heuristically set up on boot


2011-05-29
  + 2011.1 release

  * Removed SYSLINUX dependency during Linux install
  * Custom fast initramfs without blind modules probing
  * Separated KMS-dependent and VESA-dependent boots
  * Added option for booting without applying user settings
  * More RAM is wiped with KEXEC-based reboot/shutdown
  * RAM is also wiped before power-off on boot media removal
  * Power-off button is ignored when X server screen is locked
  * X server screen locks automatically on closed lid
  * Boot media filesystem is repaired on startup and shutdown

  * Kernel 2.6.37 with PLD Linux SquashFS LZMA patches
  * Parallel OpenRC facilitates faster startup and shutdown
  * Control groups assist process scheduling
  * Haveged is used for supplying entropy
  * Xorg server 1.9
  * Added OpenSSH client
  * Disabled NTP in favor of exclusive HTP use

  * Added secure and anonymous cables communication
  * Added detection and warning about virtualized environment
  * Added blinking of unused LEDs on dropped and rejected packets

  * Easy MP4[H.264+MP3] webcam video encoding
  * Easy Speex audio encoding
  * Added FBReader, XChat, Pidgin


2010-11-15
  + 2010.1 release

  * Transitioned to SYSLINUX, radically simplified installation on all platforms