@@ -1,3 +1,6 @@
+# nm-system-settings.conf has been deprecated in favor of NetworkManager.conf
+# according to the manual, but on Gentoo the former is still used.
+
 [main]
 plugins=keyfile
 
