@@ -17,6 +17,8 @@ gtordir=/var/lib/tor/hidden_service
 gi2pdir=/var/lib/i2p/router/eepsite
 cableflag=/var/www/cable
 
+i2pnmplugin=/etc/NetworkManager/dispatcher.d/03-i2p
+
 depend() {
     # need OTFE mount
     need liberte
@@ -24,10 +26,10 @@ depend() {
     # use entropy for keys generation / MAC randomization, if available
     use entropy
 
-    # Tor config (if any) must be initialized before running NetworkManager/Tor
+    # Tor/I2P identities (if any) must be initialized before running NetworkManager/Tor/I2P
     # MAC randomization needs to occur before NetworkManager startup
     # nginx www directory is initialized here
-    before NetworkManager tor
+    before NetworkManager tor i2p
     before nginx
 
     # Dependents wait indefinitely (important for parallel startup)
@@ -106,6 +108,13 @@ start() {
         rsync -lptHS --safe-links --chmod=u=rw,g=r,o= ${certsdir}/*.pem ${cableflag}/certs \
             && mv -T ${cableflag} /var/www/"${username}" \
             && sed -i "s/\<CABLE\>/${username}/; s/## allow/allow/" /etc/nginx/nginx.conf
+        eend $?
+    fi
+
+
+    if get_bootparam 'noi2p'; then
+        ewarn Disabling I2P
+        chmod a-x ${i2pnmplugin}
         eend $?
     fi
 
