@@ -29,11 +29,15 @@ wrapper.java.library.path.1=/usr/lib/java-service-wrapper
 
 # Java Additional Parameters
 # Numbers must be consecutive (except for stripquotes)
-wrapper.java.additional.1=-DloggerFilenameOverride=logs/log-router-@.txt
-wrapper.java.additional.2=-Dorg.mortbay.http.Version.paranoid=true
-wrapper.java.additional.3=-Dorg.mortbay.xml.XmlParser.NotValidating=true
-wrapper.java.additional.4=-Di2p.dir.base=/opt/i2p
-wrapper.java.additional.5=-Di2p.dir.config=/var/lib/i2p/router
+wrapper.java.additional.1=-Di2p.dir.base=/opt/i2p
+wrapper.java.additional.2=-Di2p.dir.config=/var/lib/i2p/router
+wrapper.java.additional.3=-Di2p.dir.log=/var/log/i2p
+wrapper.java.additional.4=-Djava.io.tmpdir=/var/run/i2p
+wrapper.java.additional.5=-Di2p.naming.impl=net.i2p.client.naming.HostsTxtNamingService
+# wrapper.java.additional.X=-DloggerFilenameOverride=router-#.log
+# wrapper.java.additional.X=-Dwrapper.logfile=/var/log/i2p/wrapper.log
+# wrapper.java.additional.X=-Dorg.mortbay.http.Version.paranoid=true
+# wrapper.java.additional.X=-Dorg.mortbay.xml.XmlParser.NotValidating=true
 
 # On some IPv6 enabled systems, I2P and other network-enabled java applications
 # may fail to start. For examples see
@@ -41,8 +45,8 @@ wrapper.java.additional.5=-Di2p.dir.config=/var/lib/i2p/router
 # Two things that may help if you experience this issue
 # 1) "echo 0 > /proc/sys/net/ipv6/bindv6only" as root; or
 # 2) uncomment the next two lines:
-# wrapper.java.additional.6=-Djava.net.preferIPv4Stack=true
-# wrapper.java.additional.7=-Djava.net.preferIPv6Addresses=false
+# wrapper.java.additional.X=-Djava.net.preferIPv4Stack=true
+# wrapper.java.additional.X=-Djava.net.preferIPv6Addresses=false
 
 # Java Heap Size (in MB)
 wrapper.java.initmemory=4
@@ -61,19 +65,14 @@ wrapper.console.format=PM
 wrapper.console.loglevel=FATAL
 
 # Log file to use for wrapper output logging.
-# If changed, add the following line above to
-# tell the router where to find the wrapper log:
-#   wrapper.java.additional.X=-Dwrapper.logfile=/var/lib/i2p/wrapper.log
-wrapper.logfile=/var/lib/i2p/wrapper.log
+wrapper.logfile=/var/log/i2p/wrapper.log
 wrapper.logfile.format=TM
+wrapper.logfile.maxsize=8k
+wrapper.logfile.maxfiles=1
 
 # File and syslog log levels
-wrapper.logfile.loglevel=NONE
+wrapper.logfile.loglevel=FATAL
 wrapper.syslog.loglevel=INFO
-
-# Log file max size and rolled files
-wrapper.logfile.maxsize=16k
-wrapper.logfile.maxfiles=1
 
 # choose what to do if the JVM kills itself based on the exit code
 wrapper.on_exit.default=SHUTDOWN
@@ -91,10 +90,10 @@ wrapper.on_exit.4=RESTART
 wrapper.on_exit.5=RESTART
 
 # the router may take a few seconds to save state, etc
-wrapper.jvm_exit.timeout=30
+wrapper.jvm_exit.timeout=5
 
-# give the OS 15s to clear all the old sockets / etc before restarting
-wrapper.restart.delay=15
+# give the OS some time to clear all the old sockets / etc before restarting
+wrapper.restart.delay=5
 
 # The ping timeout must be at least 5 seconds longer than the value of wrapper.ping.interval.
 # Extend this if you are getting 'JVM appears hung' shutdowns.
@@ -106,5 +105,5 @@ wrapper.ping.timeout=320
 wrapper.use_system_time=TRUE
 
 # pid file for the wrapper and the JVM (in addition to init.d's /var/run/i2p.pid)
-wrapper.pidfile=/var/lib/i2p/i2p.pid
-wrapper.java.pidfile=/var/lib/i2p/router.pid
+wrapper.pidfile=/var/run/i2p/i2p.pid
+wrapper.java.pidfile=/var/run/i2p/routerjvm.pid
