@@ -5,7 +5,7 @@
 ## TAG:         [USB], [CD], ...                   (replaced during image creation)
 ## ROOTFS:      vfat, ext2, iso9660, squashfs, ... (replaced during image creation)
 ## FSFLAGS:     noatime,...                        (replaced during image creation)
-# Optional parameters:     cdroot=/dev/xxx, gentoo=nox, gentoo=nosettings, debug
+# Optional parameters:     cdroot=/dev/xxx, debug, gentoo={nox,nosettings,noi2p}
 # Available splash themes: liberte, liberty, silent
 
 DEFAULT liberte
