@@ -1,4 +1,4 @@
 AUX i2p 489 RMD160 9d0f7eadd7d94d6cc0a460e3fac5cb3a16452794 SHA1 1060635e80faaafa0f7f6a6d6a2c584986cfc653 SHA256 49ffe6dcabbd724b1dcb8ef3434ff49b17795e21f9360387d90e6ad68ff7ee4e
-DIST i2psource_0.8.7.tar.bz2 18473515 RMD160 545e72fab13d6f6ca660b5b74d86648a9160a000 SHA1 61727b1b745d7cd882268300c7913dfd13b9f612 SHA256 31acef3fcd1a5839edc3b931f108944222c833d218bd427fe89a57b4acd92ece
+DIST i2psource_0.8.8.tar.bz2 19407244 RMD160 4eda44d98c860c93f34a45c891e6e138df338589 SHA1 b63660f3d8dbca679958c6bd1735a356fc2a74bd SHA256 522adf14aeac28281ec469f2f45c9d5ead73dd510784d5ad148aa505784a4394
 DIST jetty-5.1.15.tgz 11063548 RMD160 600062500383b985b0bfbb30d286aba3f6a6c1e4 SHA1 3a7a3de50f86f0cdb23c33aec632ea7f44132c5e SHA256 c866bfe7715941e343e66bd5d6696a743b9c0811ef9763848eb673070f4a53d6
-EBUILD i2p-0.8.7.ebuild 2294 RMD160 ba2a1134ac593178f0edf699e15240a5a32808d4 SHA1 64feb036e4cfe7a112792f08bcc6914c924de6fc SHA256 4e89abaeecbd6b9f71c24a75b5ddbeb745b151dbcb0eaae1bc6d21527a0d5f10
+EBUILD i2p-0.8.8.ebuild 2356 RMD160 528b57395d522fcad3f9b586a2f552d2e1948ced SHA1 31e4f9ff7556ab4ac4436e2c83e14ead8a44d394 SHA256 22719a936344f8a85d01987de9f08966d733206bada1d19244c8b87dc53f61ba
