@@ -5,7 +5,7 @@ logger.dateFormat=
 logger.defaultLevel=ERROR
 logger.displayOnScreen=true
 logger.format=d p [t] c: m
-logger.logFileName=logs/log-#.txt
+logger.logFileName=router-#.log
 logger.logFileSize=16k
 logger.logRotationLimit=1
 logger.minimumOnScreenLevel=CRIT
