@@ -15,11 +15,10 @@ i2cp.hostname=127.0.0.1
 i2cp.port=7654
 i2cp.tcp.bindAllInterfaces=false
 
-# Don't regenerate keys on each IP change; not specifying UDP ports
+# Regenerate keys / port nos. on each IP change; not specifying UDP ports
 # causes router.config rewrite with random ports on first start.
-# NTCP is apparently buggy when used with JamVM
-# (event pumper / NotYetConnectedException).
-i2np.laptopMode=false
+# NTCP is apparently buggy when used with JamVM (event pumper / NotYetConnectedException).
+i2np.laptopMode=true
 i2np.ntcp.autoip=false
 i2np.ntcp.enable=false
 i2np.udp.addressSources=hidden
